<resources>
    <string name="app_name">Keep</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>


    <!--左侧的各个小标题-->
    <string name="nav_jishi">记事</string>
    <string name="nav_tixing">提醒</string>
    <string name="nav_chuangjian">创建新标签</string>
    <string name="nav_guidang">已归档</string>
    <string name="nav_huishouzhan">回收站</string>
    <string name="nav_setting">设置</string>
    <string name="nav_help">帮助和反馈</string>
    <string name="setting_liebiaoxingwei">列表行为</string>
    <string name="setting_add_bottom">在底部添加新内容</string>
    <string name="setting_choose_item_bottom">将选中的项移至底部</string>
    <string name="setting_tixing">提醒设置</string>
    <string name="setting_shangwu">上午</string>
    <string name="setting_xaiwu">下午</string>
    <string name="setting_wanshang">傍晚</string>
    <string name="setting_share">共享</string>
    <string name="setting_open_share">启用共享功能</string>
    <string name="setting_shangwu_limit">请在0时到12时之间选择时间</string>
    <string name="setting_xaiwu_limit">请在12时到18时之间选择时间</string>
    <string name="setting_wanshang_limit">请在18时到24时之间选择时间</string>
    <string name="main_add_item">添加记事...</string>
    <string name="addnotice_edit_time">修改时间：</string>
    <string name="addnotice_picture">图片</string>
    <string name="addnotice_voice">录音</string>
    <string name="addnotice_draw">绘图</string>
    <string name="add_picture">添加图片</string>
    <string name="take_picture">拍照</string>
    <string name="choose_pic">选择图片</string>
    <string name="image_size">第%1$d张，共%1$d张</string>
    <string name="sure_to_delete">确定删除该张图片？</string>
    <string name="share_my_pic">分享我的图片</string>
    <string name="pic_draw">图片绘制</string>
    <string name="pic_show">分享图片</string>
    <string name="pic_delete">删除图片</string>
    <string name="choose_time">选择日期和时间</string>
    <string name="choose_address">选择地点</string>
    <string name="error_time">提醒时间不能早于当前时间</string>
    <string name="edit_time">修改日期和时间</string>
    <string name="time_delet">删除</string>
    <string name="edit_or_delete">修改或者删除</string>
    <string name="edit_address">修改地址</string>
    <string name="serach_title">搜索...</string>
    <string name="search_address">搜索地址</string>
    <string name="serach_address">正在搜索位置...</string>
    <string name="choose_address_">选择该地址</string>
    <string name="add">添加</string>
    <string name="add_draw">添加绘图</string>
    <string name="add_voice">添加语音</string>
    <string name="search">搜索</string>
    <string name="layout">布局</string>
    <string name="move_to_dustbin">确定将信息移至回收站？</string>
    <string name="had_move_to_dustbin">已将信息移至回收站</string>
    <string name="change_color">更换颜色</string>
    <string name="to_dustbin">回收站</string>
    <string name="notice_color">信息颜色</string>
    <string name="cannot_deit">回收站里面的信息无法进行修改</string>
    <string name="remove_out">移出回收站</string>
    <string name="delete_fornever">永久删除</string>
    <string name="notice_ago">记事信息已经还原</string>
    <string name="remove_all_dustbin">确定清空回收站</string>
    <string name="delete_all_noticeinfo">将永久删除回收站中的所有信息</string>
    <string name="delete_choose_noticeinfo">确定永久删除选中的信息</string>
    <string name="enyty_data">没有数据</string>
    <string name="no_jishi">您添加的记事会显示在此处</string>
    <string name="no_tixing">要发出提醒的记事会显示在此处</string>
    <string name="no__dustbin">回收站中没有任何记事</string>
    <string name="search_jishi">搜索记事</string>
    <string name="activity_chat_press_record">按住说话</string>
    <string name="activity_chat_move_to_cancel">手指上滑取消发送</string>
    <string name="activity_chat_release_to_cancel">松开手指取消发送</string>
    <string name="voice_duration_too_short">语音时间太短</string>
    <string name="add_video">添加视频</string>
    <string name="take_video">录制</string>
    <string name="pic_video">选择视频</string>
    <string name="addnotice_video">视频</string>
    <string name="add_notice">添加记事</string>
</resources>
