<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--不知道怎么添加下划线，就放一起了-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_jishi"
            android:checked="true"
            android:icon="@drawable/ic_material_keep_black"
            android:title="@string/nav_jishi" />
        <item
            android:id="@+id/nav_tixing"
            android:icon="@drawable/ic_material_reminder_finger_black"
            android:title="@string/nav_tixing" />

        <item
            android:id="@+id/nav_chuangjian"
            android:icon="@drawable/ic_material_add_black"
            android:title="@string/nav_chuangjian"></item>

        <item
            android:id="@+id/nav_guidang"
            android:icon="@drawable/ic_material_archive_black"
            android:title="@string/nav_guidang" />
        <item
            android:id="@+id/nav_huishouzhan"
            android:icon="@drawable/ic_material_trash_black"
            android:title="@string/nav_huishouzhan" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_material_settings_black"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_material_help_black"
            android:title="@string/nav_help" />
    </group>
</menu>
