<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/setting_liebiaoxingwei"
        android:textColor="@color/color_text_blue" />

    <RelativeLayout
        android:id="@+id/layout_add_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_grey_grey"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="23dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_add_bottom"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />

        <com.rey.material.widget.Switch
            android:id="@+id/switch_add_bottom"
            style="@style/SettingSwitch"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View style="@style/View_divider" />

    <RelativeLayout
        android:id="@+id/layout_choose_item_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_grey_grey"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="23dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_choose_item_bottom"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />

        <com.rey.material.widget.Switch
            android:id="@+id/switch_choose_item_bottom"
            style="@style/SettingSwitch"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/setting_tixing"
        android:textColor="@color/color_text_blue" />

    <RelativeLayout
        android:id="@+id/layout_shangwu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_grey_grey"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_shangwu"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />

        <TextView
            android:id="@+id/tv_time_shangwu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />
    </RelativeLayout>

    <View style="@style/View_divider" />

    <RelativeLayout
        android:id="@+id/layout_xiawu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_grey_grey"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_xaiwu"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />

        <TextView
            android:id="@+id/tv_time_xiawu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />
    </RelativeLayout>

    <View style="@style/View_divider" />

    <RelativeLayout
        android:id="@+id/layout_wanshang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_grey_grey"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_wanshang"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />

        <TextView
            android:id="@+id/tv_time_wanshang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/setting_share"
        android:textColor="@color/color_text_blue" />

    <RelativeLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_grey_grey"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="23dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_open_share"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_big" />

        <com.rey.material.widget.Switch
            android:id="@+id/switch_open_share"
            style="@style/SettingSwitch"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>


</LinearLayout>